# EMerge

./: .bumpversion.toml  .gitignore  README.md  UMFPACK_Install_windows.md  coupled_line_filter_dxf_z0.000.dxf  emergetools  import_test.py  pyproject.toml  test.txt  vivaldi_antenna.dxf
MyFiles/: 1.vtk  2.vtk  3.vtk  4.vtk  5.vtk
examples/: demo0_parallel_plate.py  demo10_sgh.py  demo11_lumped_element_filter.py  demo12_mode_alignment.py  demo13_helix_antenna.py  demo14_boundary_selection.py  demo15_strip_slotline_transition.py  demo16_differential_common_mode.py  demo17_step_import.py  demo18_plotting_and_visualization.py  demo19_vivaldi_antenna.py  demo1_stepped_imp_filter.py  demo20_optimization.py  demo21_inverted_F_antenna.py  demo22_RCS.py  demo2_combline_filter.py  demo3_coupled_line_filter.py  demo4_patch_antenna.py  demo5_revolve.py  demo6_striplines_with_vias.py  demo7_periodic_cells.py  demo8_waveguide_bpf_synthesis.py  demo9_dielectric_resonator.py
examples/heatconduction/: demo1_basic_simulation.py  demo2_chip_heating.py  demo3_RF_heating.py  demo4_black_body_radiation.py  demo5_transient_heat_conduction.py
src/emerge/: __init__.py  cli.py  core.py  ext.py  plot.py  read.py  write.py
src/emerge/_emerge/: bc.py  cleanup.py  coord.py  cs.py  dataset.py  file.py  geometry.py  install_check.py  logsettings.py  mdi.py  mesh3d.py  mesher.py  optim.py  periodic.py  selection.py  settings.py  simmodel.py  simstate.py  simulation_data.py  solver.py  system.py
src/emerge/_emerge/compiled/: __init__.py  baselib.py  ccbf.py  legrange.py  nedelec.py  savage.py  volakis.py  webb.py
src/emerge/_emerge/elements/: dofsets.py  femdata.py  leg2.py  ned2_interp.py  nedelec2.py  nedleg2.py
src/emerge/_emerge/geo/: __init__.py  horn.py  modeler.py  open_region.py  operations.py  pcb.py  pmlbox.py  polybased.py  shapes.py  step.py
src/emerge/_emerge/mth/: common_functions.py  csc_cast.py  integrals.py  keast_rules.py  loopsplit.py  optimized.py  strang_rules.py
src/emerge/_emerge/physics/: physics_generic.py
src/emerge/_emerge/plot/: simple_plots.py
src/emerge/_emerge/projects/: _load_base.txt
src/emerge/auxilliary/: touchstone.py
src/emerge/macro/: __init__.py  antenna.py
src/emerge_config/: config.py
(+44 files in other folders)
