[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "emerge"
version = "2.8.1"
description = "An open source EM FEM simulator in Python"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "gmsh>=4.13.0, <4.15",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "matplotlib>=3.8.0",
    "numpy>=2.2, <2.5",
    "numba>=0.60.0",
    "pyvista>=0.45.2",
    "scipy>=1.14.0",
    "mkl!=2024.0; platform_machine == \"x86_64\" or platform_machine == \"AMD64\"",
    "emsutil>=0.8.3, <0.9.0",
    "msgpack>=1.1.2",
    "msgpack-numpy>=0.4.8",
    "psutil>=7.2.2",
]

[project.scripts]
emerge = "emerge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/emerge", "src/emerge_config"]

[project.optional-dependencies]
umfpack = [
  "scikit-umfpack; sys_platform != 'win32'",
]
cudss = [
  "nvidia-cudss-cu12==0.5.0.16",
  "nvmath-python[cu12]==0.5.0",
  "cupy-cuda12x"
]
cudss12 = [
  "nvidia-cudss-cu12==0.5.0.16",
  "nvmath-python[cu12]==0.5.0",
  "cupy-cuda12x"
]
dxf = [
  "ezdxf"
]
gerber = [
  "pygerber"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "emerge-aasds",
    "pytest>=9.0.2",
    "scikit-umfpack>=0.4.2",
    "twine>=6.2.0",
]

[tool.uv]
no-build-isolation-package = ["cchardet"]

[project.urls]
Homepage = "https://github.com/FennisRobert/EMerge"
Issues = "https://github.com/FennisRobert/EMerge/issues"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy"

[tool.uv.sources]
emerge-iron = { git = "https://github.com/FennisRobert/EMerge-IRON" }
emerge-aasds = { git = "https://github.com/FennisRobert/emerge-aasds" }

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=trial_scripts"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
  "ignore:.*SwigPyPacked.*:DeprecationWarning",
  "ignore:.*SwigPyObject.*:DeprecationWarning",
  "ignore:.*swigvarlink.*:DeprecationWarning",
]
